--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+ssp:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\SspController"
+
 service:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\ServiceController"
