ssp rest api fix 4

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /web/bundles/
 /app/cache/*
 /app/logs/*
+/app/config/parameters.yml
 /build/
 /vendor/
 /bin/
 /composer.phar
-/nbproject/private/
+/nbproject/
