--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -22,6 +22,10 @@ role:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\RoleController"
     
+principal:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\\PrincipalController"
+    
 servicechild:
     type:     rest
     parent:   service
