A HEXAA adminok azt tehetnek, amit akarnak.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,7 @@ framework:
     session:         
         name:        "symfony"
         cookie_path: "/"
-        save_path:   ~
+        save_path:   "/var/lib/php5" 
     fragments:       ~
 
 # Twig Configuration
