--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "jms/serializer-bundle": "dev-master",
-        "friendsofsymfony/rest-bundle": "1.2.*@dev",
-        "nelmio/api-doc-bundle": "~2.4",
+        "friendsofsymfony/rest-bundle": "1.4.*@dev",
+        "nelmio/api-doc-bundle": "2.5.1",
         "liip/cache-control-bundle": "~1.0.5",
         "willdurand/hateoas-bundle": "0.2.*",
         "hautelook/templated-uri-bundle": "~1.0",
