--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -12,10 +12,12 @@ parameters:
     mailer_password:   ~
 
     locale:            en
-    # you can generate a token using:
+    # you can generate a secret using:
     # tr -c -d '0123456789abcdefghijklmnopqrstuvwxyz' </dev/urandom | dd bs=32 count=1 2>/dev/null;echo
     secret:            ThisTokenIsNotSoSecretChangeIt
     
+    # HEXAA UI URL
+    hexaa_ui_url: https://path.to/hexaaui
 
     # Insert service entityids here.
     hexaa_service_entityids:
