--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,6 +16,6 @@ NelmioApiDocBundle:
   resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
   prefix:   /doc
   
-FOSSamlBundle:
-  resource: "@FOSSamlBundle/Resources/config/routing.yml"
+#FOSSamlBundle:
+#  resource: "@FOSSamlBundle/Resources/config/routing.yml"
   
