--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,8 +9,8 @@ security:
 
 
     providers:
-        saml:
-            id: saml.service.user.provider
+#        saml:
+#            id: saml.service.user.provider
         master_secret:
             id: master_secret_user_provider
         personal_api:
@@ -38,10 +38,10 @@ security:
                 authenticator: personal_apikey_authenticator
             
             
-        saml_secured:
-            pattern: ^/.+
-            saml: true
-            access_denied_url: /unauthorized
+#        saml_secured:
+#            pattern: ^/.+
+#            saml: true
+#            access_denied_url: /unauthorized
             
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
