--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,10 +67,10 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
-    host:      %mailer_host%
-    username:  %mailer_user%
-    password:  %mailer_password%
-    spool:     { type: memory }
+    #host:      %mailer_host%
+    #username:  %mailer_user%
+    #password:  %mailer_password%
+    #spool:     { type: memory }
 
 sensio_framework_extra:
     view: { annotations: false }
