EntityidRequest form + controller

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -33,6 +33,10 @@ attributespec:
 attributevalue:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\AttributevalueController"
+
+entityid:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\EntityidController"
     
 servicechild:
     type:     rest
