--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -12,16 +12,43 @@ web_profiler:
 monolog:
     channels:
         - "access"
-        - "audit"
+        - "modification"
+        - "login"
+        - "release"
+        - "email"
+        
     handlers:
-        access:
-            type:   stream
-            path:   %kernel.logs_dir%/access.log
-            channels: [security, access]
-        audit:
-            type:   stream
-            path:   %kernel.logs_dir%/audit.log
-            channels: audit
+        accesshandler:
+            type:           stream
+            path:           %kernel.logs_dir%/access.log
+            action_level:   info
+            channels:       [security, access]
+        audithandler:
+            type:           stream
+            path:           %kernel.logs_dir%/audit.log
+            action_level:   info
+            channels:       modification
+        authhandler:
+            type:           stream
+            path:           %kernel.logs_dir%/auth.log
+            action_level:   info
+            channels:       [security, login]
+        releasehandler:
+            type:           stream
+            path:           %kernel.logs_dir%/release.log
+            action_level:   info
+            channels:       release
+        emailhandler:
+            type:           stream
+            path:           %kernel.logs_dir%/email.log
+            action_level:   info
+            channels:       email
+        errorhandler:
+            type:           stream
+            path:           %kernel.logs_dir%/error.log
+            action_level:   warning
+            level:          warning
+            channels:       [access, modification, login, release, email]
         main:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
