--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /app/cache/*
 /app/logs/*
 /app/config/parameters.yml
+/app/config/hexaa_entityids.yml
+/app/config/hexaa_admins.yml
 /web/.htaccess
 /build/
 /vendor/
