--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,7 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: hexaa_entityids.yml }
+    - { resource: hexaa_admins.yml }
     - { resource: security.yml }
 
 framework:
