--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "liip/cache-control-bundle": "~1.0.5",
         "willdurand/hateoas-bundle": "0.2.*",
         "hautelook/templated-uri-bundle": "~1.0",
-        "willdurand/rest-extra-bundle": "~1.0"
+        "willdurand/rest-extra-bundle": "~1.0",
+        "egulias/email-validator":"1.0.x-dev"
     },
     "conflict": {
         "symfony/routing": "2.4.1"
