--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,7 +80,7 @@ sensio_framework_extra:
 fos_rest:
     disable_csrf_role: ROLE_API
     
-    param_fetcher_listener: false
+    param_fetcher_listener: true
     view:
         view_response_listener: 'force'
         formats:
