--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,7 +17,7 @@ framework:
     templating:
         engines: ['twig']
     default_locale:  "%locale%"
-    trusted_proxies: ~
+    trusted_proxies: 127.0.0.1
     
     session:         
         name:        "symfony"
