--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -21,32 +21,32 @@ monolog:
     handlers:
         accesshandler:
             type:           stream
-            path:           %kernel.logs_dir%/access.log
+            path:           %hexaa_log_dir%/access.log
             action_level:   info
             channels:       [security, access]
         audithandler:
             type:           stream
-            path:           %kernel.logs_dir%/audit.log
+            path:           %hexaa_log_dir%/audit.log
             action_level:   info
             channels:       modification
         authhandler:
             type:           stream
-            path:           %kernel.logs_dir%/auth.log
+            path:           %hexaa_log_dir%/auth.log
             action_level:   info
             channels:       [security, login]
         releasehandler:
             type:           stream
-            path:           %kernel.logs_dir%/release.log
+            path:           %hexaa_log_dir%/release.log
             action_level:   info
             channels:       release
         emailhandler:
             type:           stream
-            path:           %kernel.logs_dir%/email.log
+            path:           %hexaa_log_dir%/email.log
             action_level:   info
             channels:       email
         errorhandler:
             type:           stream
-            path:           %kernel.logs_dir%/error.log
+            path:           %hexaa_log_dir%/error.log
             action_level:   warning
             level:          warning
             channels:       [access, modification, login, release, email, error]
