Started reworking consents, only listing works for now.

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -38,6 +38,11 @@ entityid:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\EntityidController"
     
+consent:
+    type:     rest
+    parent:   principal
+    resource: "Hexaa\ApiBundle\Controller\ConsentController"
+    
 servicechild:
     type:     rest
     parent:   service
