Consents ready, added parameter to disable consent check.

--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -26,6 +26,9 @@ parameters:
     # Master secret
     hexaa_master_secret: InsertSomeSecretHere
     
+    # Set to false to disable consent check upon attribute release
+    hexaa_consent_module: true
+    
     # GetToken valid IPs:
     hexaa_get_token_ips:
       - localhost
