--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,6 +80,7 @@ fos_rest:
             json: true
         templating_formats:
             html: true
+        serialize_null: true
     format_listener:
         rules:
             - { path: ^/api, priorities: [ json, xml, html ], fallback_format: json, prefer_extension: true }
@@ -95,6 +96,8 @@ fos_rest:
     access_denied_listener:
         json: true
     body_listener: true
+    serializer:
+        serialize_null: true
 
 nelmio_api_doc: 
     name: HEXAA REST API
