Refactor some queries

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -56,6 +56,11 @@ entitlementpackentitlement:
     type:     rest
     parent:   entitlementpack
     resource: "Hexaa\ApiBundle\Controller\EntitlementpackEntitlementController"
+
+news:
+    type:     rest
+    parent:   principal
+    resource: "Hexaa\ApiBundle\Controller\\NewsController"
     
 other:
     type:     rest
