move masterSecret Auth to ApiBundle

--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -1,6 +1,8 @@
 parameters:
     personal_apikey_user_provider.class: Hexaa\ApiBundle\Security\personalApiKey\PersonalApiKeyUserProvider
     personal_apikey_authenticator.class: Hexaa\ApiBundle\Security\personalApiKey\PersonalApiKeyAuthenticator
+    master_secret_user_provider.class:   Hexaa\ApiBundle\Security\masterSecret\MasterSecretUserProvider
+    master_secret_authenticator.class:   Hexaa\ApiBundle\Security\masterSecret\MasterSecretAuthenticator
     attribute_spec_by_user_and_id.class: Hexaa\ApiBundle\Validator\Constraints\AttributeSpecByUserAndIdValidator
 services:
     personal_apikey_user_provider:
@@ -9,6 +11,12 @@ services:
     personal_apikey_authenticator:
         class:     %personal_apikey_authenticator.class%
         arguments: ["@personal_apikey_user_provider", "@security.http_utils", "@monolog.logger.login"]
+    master_secret_user_provider:
+        class: %master_secret_user_provider.class%
+        arguments: [%hexaa_master_secret%, "@monolog.logger.login"]
+    master_secret_authenticator:
+        class:     %master_secret_authenticator.class%
+        arguments: ["@master_secret_user_provider", "@security.http_utils", "@monolog.logger.login"]
     validator.uniquie.valid_entityid:
         class: Hexaa\ApiBundle\Validator\Constraints\ValidEntityidValidator
         tags:
