--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "sensio/generator-bundle": "2.3.*",
         "jms/serializer-bundle": "dev-master",
         "friendsofsymfony/rest-bundle": "1.4.*@dev",
-        "nelmio/api-doc-bundle": "2.5.1",
+        "nelmio/api-doc-bundle": "dev-master",
         "liip/cache-control-bundle": "~1.0.5",
         "willdurand/hateoas-bundle": "0.2.*",
         "hautelook/templated-uri-bundle": "~1.0",
