--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "willdurand/hateoas-bundle": "0.2.*",
         "hautelook/templated-uri-bundle": "~1.0",
         "willdurand/rest-extra-bundle": "~1.0",
-        "egulias/email-validator":"1.0.x-dev"
+        "egulias/email-validator":"1.0.x-dev",
+        "rhumsaa/uuid": "dev-master"
     },
     "conflict": {
         "symfony/routing": "2.4.1"
