added /api/organization/(member|manager) and /api/service/manager

--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -52,3 +52,7 @@ services:
         tags:
             - { name: validator.constraint_validator, alias: entitlement_uri }
         arguments: [ %hexaa_entitlement_uri_prefix% ]
+    validator.uniquie.manager_is_organization_member:
+        class: Hexaa\ApiBundle\Validator\Constraints\ManagerIsOrganizationMemberValidator
+        tags:
+            - { name: validator.constraint_validator, alias: manager_is_organization_member }
