PUT /api/organization/entitlementpack added

--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -56,3 +56,8 @@ services:
         class: Hexaa\ApiBundle\Validator\Constraints\ManagerIsOrganizationMemberValidator
         tags:
             - { name: validator.constraint_validator, alias: manager_is_organization_member }
+    validator.uniquie.new_entitlement_pack_is_not_private:
+        class: Hexaa\ApiBundle\Validator\Constraints\NewEntitlementPackIsNotPrivateValidator
+        tags:
+            - { name: validator.constraint_validator, alias: new_entitlement_pack_is_not_private }
+        arguments: [ "@doctrine.orm.entity_manager", "@security.context" ]
