--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -56,5 +56,5 @@ monolog:
             handler:      nested
         nested:
             type:  stream
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            path:  %hexaa_log_dir%/hexaa.log
             level: debug
