New endpoint "properties" for global hexaa settings, api/version removed.

--- a/src/Hexaa/ApiBundle/Resources/config/routing.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/routing.yml
@@ -64,3 +64,7 @@ entitlementpackentitlement:
 other:
     type:     rest
     resource: "Hexaa\ApiBundle\Controller\RestController"
+    
+hexaa:
+    type:     rest
+    resource: "Hexaa\ApiBundle\Controller\HexaaController"
