--- a/src/Hexaa/ApiBundle/Resources/config/services.yml
+++ b/src/Hexaa/ApiBundle/Resources/config/services.yml
@@ -19,7 +19,7 @@ services:
         arguments: ["@master_secret_user_provider", "@security.http_utils", "@monolog.logger.login"]
     hexaa.check_policy.action_listener:
         class: Hexaa\ApiBundle\EventListener\CheckPolicyListener
-        arguments: [ "@doctrine.orm.entity_manager", "@monolog.logger.login", "@monolog.logger.error" ]
+        arguments: [ "@doctrine.orm.entity_manager", "@monolog.logger.login", "@monolog.logger.error", %hexaa_admins%, "@security.context" ]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
     validator.uniquie.valid_entityid:
