finish the rest of the multi masterKey system + minor fixes

--- a/app/config/parameters_dist.yml
+++ b/app/config/parameters_dist.yml
@@ -26,9 +26,9 @@ parameters:
     # Master secret
     hexaa_master_secrets:
         # for GUI use
-        - InsertSomeSecretHere: default  
+        InsertSomeSecretHere: defaultMasterKey
         # others (use MasterKeyHook!)
-        - SomeOtherSecret: restricted_access
+        #SomeOtherSecret: restrictedMasterKey
     
     # Set to false to disable consent check upon attribute release
     hexaa_consent_module: true
